--- a/src/main/webapp/patient.xhtml
+++ b/src/main/webapp/patient.xhtml
@@ -62,7 +62,7 @@
                             </p:inputText>
 
                             <h:outputLabel value="Email"/>
-                            <p:inputText autocomplete="off"  id="txtEmail" value="#{patientController.current.person.email}" style="width: 200px;text-transform:uppercase;">
+                            <p:inputText autocomplete="off"  id="txtEmail" value="#{patientController.current.person.email}" style="width: 200px;">
                             </p:inputText>
 
                             <h:outputLabel value="NIC"/>
