--- a/src/main/webapp/lab/sampling.xhtml
+++ b/src/main/webapp/lab/sampling.xhtml
@@ -1,23 +1,25 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <body>
 
         <ui:composition template="./../resources/template/template.xhtml">
 
             <ui:define name="title">
-                title
+                Sample Collection
             </ui:define>
 
             <ui:define name="content">
-                content
+                <p:panel header="Sample Collection" ></p:panel>
+                <h:panelGrid columns="3" ></h:panelGrid>
+                <p:inputText value="" ></p:inputText>
+                <p:commandButton value="Search" ajax="false" ></p:commandButton>
             </ui:define>
 
-            <ui:define name="login">
-                login
-            </ui:define>
 
         </ui:composition>
 
