--- a/src/main/webapp/lab/sampling.xhtml
+++ b/src/main/webapp/lab/sampling.xhtml
@@ -5,23 +5,73 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <body>
+    <h:body>
 
-        <ui:composition template="./../resources/template/template.xhtml">
+        <h:outputStylesheet library="css" name="stickerprints.css" />
+
+        <ui:composition template="/resources/template/template.xhtml">
 
             <ui:define name="title">
                 Sample Collection
             </ui:define>
 
             <ui:define name="content">
-                <p:panel header="Sample Collection" ></p:panel>
-                <h:panelGrid columns="3" ></h:panelGrid>
-                <p:inputText value="" ></p:inputText>
-                <p:commandButton value="Search" ajax="false" ></p:commandButton>
+
+
+
+                <h:form>
+
+
+                    <p:panel header="Sample Collection" ></p:panel>
+                    <h:panelGrid columns="3" >
+                        <p:outputLabel value="Enter Bill ID" ></p:outputLabel>
+                        <p:inputText value="#{patientInvestigationController.inputBillId}" ></p:inputText>
+                        <p:commandButton value="Search" ajax="false" action="#{patientInvestigationController.prepareSampleCollection()}" ></p:commandButton>
+                    </h:panelGrid>
+                    <table >
+                        <tr>
+                            <th>
+                                Name
+                            </th>
+                            <th>
+                                Dept
+                            </th>
+                            <th>
+                                Sample
+                            </th>
+                            <th>
+                                Tests
+                            </th>
+
+                        </tr>
+
+                        <ui:repeat value="#{patientInvestigationController.patientSamples}" var="ps" >
+                            <tr>
+                                <th>
+                                    #{ps.bill.patient}
+                                </th>
+                                <th>
+                                    #{ps.patientInvestigation.investigation.department}
+                                </th>
+                                <th>
+                                    #{ps.test.name}
+                                </th>
+                                <th>
+                                    Tests
+                                </th>
+
+                            </tr>
+                        </ui:repeat>
+                    </table>
+
+
+                </h:form>
+
+
             </ui:define>
 
 
         </ui:composition>
 
-    </body>
+    </h:body>
 </html>
